add text to readme and change padlock position

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             </nav>
         <main>
             <img class="img" src="./images/img1.png" alt="Ilustração de uma mulher ao lado de um notebook">
-            <section class="text"> <h1>
+            <section class="text"> 
+                <h1>
                 Seus dados estão <span>protegidos?</span> 
-            </h1>
+                </h1>
             <p>
                 A informação é fundamental e de <strong>extrema importância</strong> para qualquer <br> empresa. 
                 <br> <br>
